--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-lottie": "^1.2.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
