--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-dropdown": "^1.11.0",
     "react-lottie": "^1.2.3",
+    "sweetalert2": "^11.7.20",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
